Restyled style.less to remove whitespace bug. (Due to not floating element)

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -8,8 +8,6 @@
 
 html{
 	height:100%;
-	padding:0px;
-	margin:0px;
 }
 
 body {
@@ -21,8 +19,6 @@ body {
 	/* Additional */
 	background-color: @background-color;
     color: @text-color;	
-	padding:0px;
-	margin:0px;
 }
 
 section{
@@ -50,16 +46,29 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #settings {
-	position:relative;
-	top:0;
-	background-color:#ddd;
+	float:left;
+	width:100%;
+	background-color:#e0e0e0;
 	.inner-shadow(0px, -4px, 4px, 0.5); 
 }
 
 nav {
 	padding:0.3em;
+	padding-right:0.3em;
+	padding-top:1.8em;
 	text-align:right;
 	background-color:@nav-color;
+}
+
+#settingsbutton {
+	padding:0.1em;
+	.rounded(2px);
+	text-decoration:none;
+}
+#settingsbutton:hover {
+	/*color:#888;*/
+	.drop-shadow(0px,0px,4px,0.6);
+	transition: box-shadow 0.4s;
 }
 
 img {
